# cqs-mockup-tool

./: .env.example  .gitignore  CQS_Social_Media_Promotion_Complete_Guide.md  EDITOR_REFACTOR_STATUS.md  GROK_TASKS_BARBER_FEED.md  README.md  SIDE_PROJECT.md  WEBHOOK_SETUP.md  main.py  memory.md  package-lock.json  package.json  proxy.ts  pyproject.toml  streamlit_app.py  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: AdminQueueClient.tsx  CollectionAssigner.tsx  CollectionDropdown.tsx  MockupThumbnail.tsx  PricingModal.tsx  PrintfulDraftOrders.tsx  loading.tsx  page.tsx
app/app/: layout.tsx  page.tsx
app/studio/: layout.tsx  page.tsx
components/: FabricEditor.tsx  TawkChat.tsx
components/barber-feed/: FeedPost.tsx  FollowButton.tsx  GroupCard.tsx  PostCreator.tsx
components/promote/: FacebookPageSelector.tsx  PromoteBuilder.tsx
components/studio/: GroupLogoButton.tsx  MyDesignsClient.tsx
components/tour/: TourButton.tsx  TourControls.tsx  (+1 more)
cqs-app/: app.json  package-lock.json  package.json
cqs_mockup/: config.py  main.py
docs/: BARBER_FEED_SPEC.md
legacy/: config.toml  requirements.txt  streamlit_app.py
lib/: api-auth.ts  description-html.ts  facebook-sdk.ts  favorites.ts  group-type.ts  oauth-handlers.ts  posting-engine.ts  printful.ts  push.ts  resend.ts  send-booking-emails.ts  shopify.ts
logo-processor/: docker-compose.yml
public/: manifest.json  pitch-pipe.html  sw.js  thisone.html
scripts/: generate-credentials.mjs  seed-collections.mjs
types/: barber-feed.ts  social-complete.ts  social.ts  supabase.ts
(+153 files in other folders)
